// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tab-bar/demo/basic.md correctly 1`] = `
<div
  style="height:400px"
>
  <div
    class="am-tab-bar"
  >
    <div
      class="am-tabs am-tabs-horizontal am-tabs-bottom"
    >
      <div
        class="am-tabs-content-wrap"
        style="touch-action:pan-x pan-y;position:relative;left:-100%"
      >
        <div
          aria-hidden="true"
          aria-labelledby="m-tabs-0-0"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
          role="tabpanel"
        >
          <div
            class="am-tab-bar-item"
          >
            <div
              style="background-color:white;height:100%;text-align:center"
            >
              <div
                style="padding-top:60px"
              >
                Clicked “Life” tab， show “Life” information
              </div>
              <a
                style="display:block;margin-top:40px;margin-bottom:20px;color:#108ee9"
              >
                Click to show/hide tab-bar
              </a>
              <a
                style="display:block;margin-bottom:600px;color:#108ee9"
              >
                Click to switch fullscreen
              </a>
            </div>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="m-tabs-0-1"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
          role="tabpanel"
        >
          <div
            class="am-tab-bar-item"
          >
            <div
              style="background-color:white;height:100%;text-align:center"
            >
              <div
                style="padding-top:60px"
              >
                Clicked “Koubei” tab， show “Koubei” information
              </div>
              <a
                style="display:block;margin-top:40px;margin-bottom:20px;color:#108ee9"
              >
                Click to show/hide tab-bar
              </a>
              <a
                style="display:block;margin-bottom:600px;color:#108ee9"
              >
                Click to switch fullscreen
              </a>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="m-tabs-0-2"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
          role="tabpanel"
        >
          <div
            class="am-tab-bar-item"
          >
            <div
              style="background-color:white;height:100%;text-align:center"
            >
              <div
                style="padding-top:60px"
              >
                Clicked “Friend” tab， show “Friend” information
              </div>
              <a
                style="display:block;margin-top:40px;margin-bottom:20px;color:#108ee9"
              >
                Click to show/hide tab-bar
              </a>
              <a
                style="display:block;margin-bottom:600px;color:#108ee9"
              >
                Click to switch fullscreen
              </a>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="m-tabs-0-3"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
          role="tabpanel"
        />
      </div>
      <div
        class="am-tabs-tab-bar-wrap"
      >
        <div
          class="am-tab-bar-bar"
          style="background-color:white"
        >
          <div
            class="am-tab-bar-tab"
            data-seed="logId"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#949494"
            >
              <span
                class="am-badge am-tab-bar-tab-badge tab-badge"
              >
                 
                <div
                  style="width:22px;height:22px;background:url(https://zos.alipayobjects.com/rmsportal/sifuoDUQdAFKAVcFGROC.svg) center center /  21px 21px no-repeat"
                />
                 
                <sup
                  class="am-badge-text"
                >
                  1
                </sup>
              </span>
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#949494"
            >
              Life
            </p>
          </div>
          <div
            class="am-tab-bar-tab"
            data-seed="logId1"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#33A3F4"
            >
              <span
                class="am-badge am-tab-bar-tab-badge tab-badge"
              >
                 
                <div
                  style="width:22px;height:22px;background:url(https://gw.alipayobjects.com/zos/rmsportal/ekLecvKBnRazVLXbWOnE.svg) center center /  21px 21px no-repeat"
                />
                 
                <sup
                  class="am-badge-text"
                >
                  new
                </sup>
              </span>
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#33A3F4"
            >
              Koubei
            </p>
          </div>
          <div
            class="am-tab-bar-tab"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#949494"
            >
              <span
                class="am-badge am-tab-bar-tab-badge tab-dot"
              >
                <div
                  style="width:22px;height:22px;background:url(https://zos.alipayobjects.com/rmsportal/psUFoAMjkCcjqtUCNPxB.svg) center center /  21px 21px no-repeat"
                />
                <sup
                  class="am-badge-dot"
                />
              </span>
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#949494"
            >
              Friend
            </p>
          </div>
          <div
            class="am-tab-bar-tab"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#949494"
            >
              <img
                alt="My"
                class="am-tab-bar-tab-image"
                src="https://zos.alipayobjects.com/rmsportal/asJMfBrNqpMMlVpeInPQ.svg"
              />
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#949494"
            >
              My
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tab-bar/demo/listview-tabbar.md correctly 1`] = `
<div
  style="position:fixed;height:100%;width:100%;top:0"
>
  <div
    class="am-tab-bar"
  >
    <div
      class="am-tabs am-tabs-horizontal am-tabs-bottom"
    >
      <div
        class="am-tabs-content-wrap"
        style="touch-action:pan-x pan-y;position:relative;left:0%"
      >
        <div
          aria-hidden="false"
          aria-labelledby="m-tabs-1-0"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
          role="tabpanel"
        >
          <div
            class="am-tab-bar-item"
          >
            <div
              class="am-list-view-scrollview"
              style="position:relative;overflow:auto;-webkit-overflow-scrolling:touch;height:0"
            >
              <div
                class="am-list-view-scrollview-content am-list"
                style="position:absolute;min-width:100%"
              >
                <div
                  class="am-list-header"
                >
                  <span>
                    header
                  </span>
                </div>
                <div
                  class="am-list-body"
                />
                <div
                  class="am-list-footer"
                >
                  <div
                    style="padding:30px;text-align:center"
                  >
                    Loading...
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="m-tabs-1-1"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
          role="tabpanel"
        />
        <div
          aria-hidden="true"
          aria-labelledby="m-tabs-1-2"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
          role="tabpanel"
        />
        <div
          aria-hidden="true"
          aria-labelledby="m-tabs-1-3"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
          role="tabpanel"
        />
      </div>
      <div
        class="am-tabs-tab-bar-wrap"
      >
        <div
          class="am-tab-bar-bar"
          style="background-color:white"
        >
          <div
            class="am-tab-bar-tab"
            data-seed="logId"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#33A3F4"
            >
              <span
                class="am-badge am-tab-bar-tab-badge tab-badge"
              >
                 
                <div
                  style="width:22px;height:22px;background:url(https://zos.alipayobjects.com/rmsportal/iSrlOTqrKddqbOmlvUfq.svg) center center /  21px 21px no-repeat"
                />
                 
                <sup
                  class="am-badge-text"
                >
                  1
                </sup>
              </span>
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#33A3F4"
            >
              Life
            </p>
          </div>
          <div
            class="am-tab-bar-tab"
            data-seed="logId1"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#949494"
            >
              <span
                class="am-badge am-tab-bar-tab-badge tab-badge"
              >
                 
                <div
                  style="width:22px;height:22px;background:url(https://gw.alipayobjects.com/zos/rmsportal/BTSsmHkPsQSPTktcXyTV.svg) center center /  21px 21px no-repeat"
                />
                 
                <sup
                  class="am-badge-text"
                >
                  new
                </sup>
              </span>
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#949494"
            >
              Koubei
            </p>
          </div>
          <div
            class="am-tab-bar-tab"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#949494"
            >
              <span
                class="am-badge am-tab-bar-tab-badge tab-dot"
              >
                <div
                  style="width:22px;height:22px;background:url(https://zos.alipayobjects.com/rmsportal/psUFoAMjkCcjqtUCNPxB.svg) center center /  21px 21px no-repeat"
                />
                <sup
                  class="am-badge-dot"
                />
              </span>
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#949494"
            >
              Friend
            </p>
          </div>
          <div
            class="am-tab-bar-tab"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#949494"
            >
              <img
                alt="My"
                class="am-tab-bar-tab-image"
                src="https://zos.alipayobjects.com/rmsportal/asJMfBrNqpMMlVpeInPQ.svg"
              />
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#949494"
            >
              My
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tab-bar/demo/top-tabbar.md correctly 1`] = `
<div
  style="height:400px"
>
  <div
    class="am-tab-bar"
  >
    <div
      class="am-tabs am-tabs-horizontal am-tabs-top"
    >
      <div
        class="am-tabs-tab-bar-wrap"
      >
        <div
          class="am-tab-bar-bar"
          style="background-color:white"
        >
          <div
            class="am-tab-bar-tab"
            data-seed="logId"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#949494"
            >
              <span
                class="am-badge am-tab-bar-tab-badge tab-badge"
              >
                 
                <div
                  style="width:22px;height:22px;background:url(https://zos.alipayobjects.com/rmsportal/sifuoDUQdAFKAVcFGROC.svg) center center /  21px 21px no-repeat"
                />
                 
                <sup
                  class="am-badge-text"
                >
                  1
                </sup>
              </span>
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#949494"
            >
              Life
            </p>
          </div>
          <div
            class="am-tab-bar-tab"
            data-seed="logId1"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#33A3F4"
            >
              <span
                class="am-badge am-tab-bar-tab-badge tab-badge"
              >
                 
                <div
                  style="width:22px;height:22px;background:url(https://gw.alipayobjects.com/zos/rmsportal/ekLecvKBnRazVLXbWOnE.svg) center center /  21px 21px no-repeat"
                />
                 
                <sup
                  class="am-badge-text"
                >
                  new
                </sup>
              </span>
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#33A3F4"
            >
              Koubei
            </p>
          </div>
          <div
            class="am-tab-bar-tab"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#949494"
            >
              <span
                class="am-badge am-tab-bar-tab-badge tab-dot"
              >
                <div
                  style="width:22px;height:22px;background:url(https://zos.alipayobjects.com/rmsportal/psUFoAMjkCcjqtUCNPxB.svg) center center /  21px 21px no-repeat"
                />
                <sup
                  class="am-badge-dot"
                />
              </span>
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#949494"
            >
              Friend
            </p>
          </div>
          <div
            class="am-tab-bar-tab"
          >
            <div
              class="am-tab-bar-tab-icon"
              style="color:#949494"
            >
              <img
                alt="My"
                class="am-tab-bar-tab-image"
                src="https://zos.alipayobjects.com/rmsportal/asJMfBrNqpMMlVpeInPQ.svg"
              />
            </div>
            <p
              class="am-tab-bar-tab-title"
              style="color:#949494"
            >
              My
            </p>
          </div>
        </div>
      </div>
      <div
        class="am-tabs-content-wrap"
        style="touch-action:pan-x pan-y;position:relative;left:-100%"
      >
        <div
          aria-hidden="true"
          aria-labelledby="m-tabs-2-0"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
          role="tabpanel"
        >
          <div
            class="am-tab-bar-item"
          >
            <div
              style="background-color:white;height:100%;text-align:center"
            >
              <div
                style="padding-top:60px"
              >
                Clicked “Life” tab， show “Life” information
              </div>
              <a
                style="display:block;margin-top:40px;margin-bottom:20px;color:#108ee9"
              >
                Click to show/hide tab-bar
              </a>
              <a
                style="display:block;margin-bottom:600px;color:#108ee9"
              >
                Click to switch fullscreen
              </a>
            </div>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="m-tabs-2-1"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
          role="tabpanel"
        >
          <div
            class="am-tab-bar-item"
          >
            <div
              style="background-color:white;height:100%;text-align:center"
            >
              <div
                style="padding-top:60px"
              >
                Clicked “Koubei” tab， show “Koubei” information
              </div>
              <a
                style="display:block;margin-top:40px;margin-bottom:20px;color:#108ee9"
              >
                Click to show/hide tab-bar
              </a>
              <a
                style="display:block;margin-bottom:600px;color:#108ee9"
              >
                Click to switch fullscreen
              </a>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="m-tabs-2-2"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
          role="tabpanel"
        >
          <div
            class="am-tab-bar-item"
          >
            <div
              style="background-color:white;height:100%;text-align:center"
            >
              <div
                style="padding-top:60px"
              >
                Clicked “Friend” tab， show “Friend” information
              </div>
              <a
                style="display:block;margin-top:40px;margin-bottom:20px;color:#108ee9"
              >
                Click to show/hide tab-bar
              </a>
              <a
                style="display:block;margin-bottom:600px;color:#108ee9"
              >
                Click to switch fullscreen
              </a>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="m-tabs-2-3"
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
          role="tabpanel"
        />
      </div>
    </div>
  </div>
</div>
`;
